Fix width on mobile [stage-10]

--- a/src/scss/sections/template-editor-layout.scss
+++ b/src/scss/sections/template-editor-layout.scss
@@ -749,6 +749,10 @@ $madero-light-blue: #107DDA;
   overflow-y: auto;
   width: var(--sidebar-width);
 
+  @media (max-width: $screen-sm) {
+    width: 100%;
+  }
+
   .file-row {
     display: flex;
     flex-wrap: nowrap;
